--- a/code/m-view/package.json
+++ b/code/m-view/package.json
@@ -2,7 +2,7 @@
   "name": "vue-demo",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "liziping <877286986@qq.com>",
+  "author": "locqj <locqj@qq.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "mint-ui": "^2.2.5",
+    "lrz": "^4.9.40",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1",
     "vue2-editor": "^2.0.24",
